style.css
body {
    margin: 0;
    background-color: #000;
    color: #fff;
    font-family: "Open Sans", sans-serif;
}

h1,
h2,
h3 {
    font-family: "Volkhov", serif;
}

code {
    font-family: "Ubuntu Mono", monospace;
}

header {
    background-color: #333;
    color: white;
    line-height: 75px;
    padding: 0 20px;
    display: flex;
    height: 75px;
}

main {
    transition: transform 0.5s cubic-bezier(0, -0.19, 0, 1);
    will-change: transform;
}

.note-display {
    padding: 20px;
}

.new-note,
.edit-note,
.view-note {
    background: #000;
    display: none;
    width: 100%;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow-y: scroll;
}

.new-note-form,
.edit-note-form,
.view-note-form {
    padding: 20px;
    will-change: transform;
}

.show-new-note,
.show-edit-note,
.show-view-note {
    animation-name: display;
    animation-duration: 0.5s;
    animation-timing-function: cubic-bezier(0, -0.19, 0, 1);
    display: block;
}

@keyframes display {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0);
    }
}

.shift {
    transform: translateX(-15%);
}

.not-show-new-note,
.not-show-edit-note,
.not-show-view-note {
    animation-name: not-display;
    animation-duration: 0.5s;
    animation-timing-function: cubic-bezier(0, -0.19, 0, 1);
    display: block;
}

@keyframes not-display {
    0% {
        display: block;
        transform: translateX(0);
    }
    100% {
        display: block;
        transform: translateX(100%);
    }
}

h1 {
    margin: 0;
}

div {
    margin-bottom: 10px;
}

.notes-title {
    display: flex;
}

.icon-tabler-edit {
    right: 1rem;
    top: 15px;
    position: absolute;
}

.icon-tabler-trash,
.icon-tabler-pencil {
    right: 1rem;
    top: 15px;
    position: absolute;
}

.icon-tabler-pencil {
    right: 4rem;
}

.icon-tabler-x,
.icon-tabler-x2 {
    margin-top: 15px;
}

#title,
#title2 {
    width: 95%;
    resize: none;
    margin: 0 0 0;
    min-height: 3rem;
    height: 3rem;
    border: none;
    outline: none;
    color: white;
    background-color: #000;
    font-family: "Volkhov", serif;
    font-size: 2rem;
}

#body,
#body2 {
    width: 95%;
    resize: none;
    margin: 0 0 0;
    /* min-height: 5rem;
    max-height: none; */
    height: auto;
    border: none;
    outline: none;
    color: white;
    background-color: #000;
    font-family: "Open Sans", sans-serif;
    font-size: 1rem;
}

.textpreview {
    display: flex;
}

.textpreview p {
    margin-right: 10px;
}

#list div h3 {
    margin-bottom: 0;
}

#back,
#back2,
#back3 {
    display: flex;
}

.table {
    overflow-x: auto;
    max-width: 100%;
}

table,
th,
td {
    border: 1px solid white;
    border-collapse: collapse;
    padding: 5px;
    word-break: normal;
}

th {
    border-bottom: 3px solid white;
}

#view-body {
    overflow-wrap: break-word;
}

#view-body h1 {
    font-size: 2rem;
}

#view-body h2 {
    font-size: 1.6rem;
}

#view-title {
    overflow-wrap: break-word;
}

.textpreview {
    overflow-wrap: break-word;
}

button {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    font-family: 'Open Sans', sans-serif;
    padding: 0.8rem;
    font-size: 1rem;
    border: none;
    border-radius: 0.5rem;
    font-weight: bold;
    color: black;
    cursor: pointer;
}

button:hover {
    color: black;
    background-color: #CCC;
}

.password-form, .password-form2 {
    display: none;
    padding: 1rem;
    padding-top: 2rem;
}

.password-form-input, .password-form2-input {
    margin-top: 1rem;
}

.password-form.show, .password-form2.show {
    display: block;
}

